
This file shows the changes in recent releases of MODX. The most current release is usually the
development release, and is only shown to give an idea of what's currently in the pipeline.

- [#6428] Fix improperly designated tooltip and UI for create namespace window
- Fix various regression issues with rename/delete files/directories in the Files tree
- Ensure hideFiles property works for the files tree
- [#6383] Add index.php to minify paths
- Prevent TVs tab from showing in Resources if the only TVs are of type "hidden"
- [#6413] Fix missing date_timezone setting description
- [#6297] Prevent invalid characters in property set names
- [#5997] Fix issue where components dirs were being created in assets with non-standard assets directory paths
- Fix issue where resource ID was not being passed to FC rule checks
- [#6417] Fix issue with modResource class_key being incorrectly set
- Adjust modResponse contentType loading to allow overriding in custom resource classes
- Fix critical timezone issue introduced for [#6077]

MODX Revolution 2.2.0-rc-2 (December 16, 2011)
====================================
- [#3033] Add method to reload Context data in same request
- [#6372] Add explicit resource_duplicate permission for duplicating a resource
- [#6364] Fix incorrect lexicon reference in package versions grid
- [#6365] Add manager_login_url_alternate setting which allows for setting a custom manager login URL
- [#6077] Override PHP default timezone via System/Context Settings
- [#5709] Fix issue where drag/drop in left trees did not work when package management was open
- [#6153] Prevent enter key from sending Message when typing in messages page
- [#6349] Properties can now belong to areas, and are grouped in grid by area
- [#6344] Fix various pathing issues when drag/dropping files into content
- [#5941] Add anonymous Load Only ACL when creating contexts
- [#6247] Fix minify issues outside of $_SERVER['DOCUMENT_ROOT']