@@ -50,12 +50,17 @@ $min_serveOptions['maxAge'] = (int)$modx->getOption('manager_js_cache_max_age',n
 $min_serveOptions['minApp']['groupsOnly'] = false;
 $min_serveOptions['minApp']['maxFiles'] = (int)$modx->getOption('manager_js_cache_max_files',null,50);
 $min_serveOptions['minApp']['allowDirs'][] = $min_documentRoot;
+$min_serveOptions['minifierOptions']['text/css']['virtualDirs'] = array();
 $min_symlinks = array();
-if (strpos(MODX_MANAGER_PATH, $min_documentRoot) !== 0) {
+if (strpos(MODX_MANAGER_PATH, $min_documentRoot) !== 0 || strpos(MODX_MANAGER_PATH, MODX_MANAGER_URL) === false) {
     $min_serveOptions['minApp']['allowDirs'][] = MODX_MANAGER_PATH;
-    $min_serveOptions['minApp']['virtualDirs'] = array(MODX_MANAGER_URL => MODX_MANAGER_PATH);
-    $min_serveOptions['minifierOptions']['text/css']['virtualDirs'] = array(MODX_MANAGER_URL => MODX_MANAGER_PATH);
+    $min_serveOptions['minApp']['virtualDirs'][MODX_MANAGER_URL] = MODX_MANAGER_PATH;
 }
+if (strpos(MODX_ASSETS_PATH, $min_documentRoot) !== 0 || strpos(MODX_ASSETS_PATH, MODX_ASSETS_URL) === false) {
+    $min_serveOptions['minApp']['allowDirs'][] = MODX_ASSETS_PATH;
+    $min_serveOptions['minApp']['virtualDirs'][MODX_ASSETS_URL] = MODX_ASSETS_PATH;
+}
+$min_serveOptions['minifierOptions']['text/css']['virtualDirs'] = $min_serveOptions['minApp']['virtualDirs'];
 $min_uploaderHoursBehind = 0;
 $min_libPath = dirname(__FILE__) . '/lib';
 @ini_set('zlib.output_compression', (int)$modx->getOption('manager_js_zlib_output_compression',null,0));
